--- a/tb3_ws/src/robot_trayectory/package.xml
+++ b/tb3_ws/src/robot_trayectory/package.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
+  schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>robot_trayectory</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="isabel@al435576.uji.es">isabel</maintainer>
-  <license>TODO: License declaration</license>
+  <description>Robot trajectories</description>
+  <maintainer email="al435576@uji.es">Isabel Torres</maintainer>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <build_depend>rclcpp</build_depend>
+  <build_depend>std_msgs</build_depend>
+
+  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
