CMake y package modificados para el anterior ejecutable

--- a/tb3_ws/src/robot_trayectory/CMakeLists.txt
+++ b/tb3_ws/src/robot_trayectory/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.5)
 project(robot_trayectory)
 
-# Default to C99
+
 if(NOT CMAKE_C_STANDARD)
   set(CMAKE_C_STANDARD 99)
 endif()
 
-# Default to C++14
+
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
 endif()
@@ -15,14 +15,14 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
+
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 
-# Ejecutable RENOMBRADO
+# Ejecutable
 add_executable(square src/square.cpp)
-ament_target_dependencies(square rclcpp std_msgs)
+ament_target_dependencies(square rclcpp geometry_msgs)
 
 # Instalación
 install(TARGETS
@@ -31,4 +31,5 @@ install(TARGETS
 )
 
 ament_package()
+
 
